# flashback

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  CODEOWNERS  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  package.yml  publish_docs.yml  publish_package.yml  release.yml
copernicus/: __init__.py  borg.py  deprecated.py  retryable.py  timeable.py
copernicus/caching/: __init__.py  cache.py  cacheable.py
copernicus/caching/adapters/: base.py  disk_adapter.py  memcached_adapter.py  memory_adapter.py  redis_adapter.py
copernicus/debugging/: __init__.py  formatter.py  parser.py  xp.py
copernicus/debugging/styles/: __init__.py  jellybeans.py  solarized.py
copernicus/formatting/: __init__.py  functions.py
copernicus/formatting/locales/: de.py  en.py  es.py  fr.py
copernicus/i16g/: locale.py
copernicus/importing/: __init__.py  functions.py
copernicus/logging/: __init__.py  configurations.py
flashback/: __init__.py  borg.py  classproperty.py  deprecated.py  encrypted_file.py  retryable.py  sampled.py  sentinel.py  singleton.py  timeable.py  timed.py  timeoutable.py
flashback/accessing/: __init__.py  dig.py  pick.py  values_at.py
flashback/caching/: __init__.py  cache.py  cacheable.py  cached.py
flashback/caching/adapters/: __init__.py  base.py  disk_adapter.py  memcached_adapter.py  memory_adapter.py  redis_adapter.py
flashback/debugging/: __init__.py  caller.py  formatter.py  functions.py  get_call_context.py  get_callable.py  get_frame.py  get_frameinfo.py  parser.py  profiled.py  xp.py
flashback/debugging/filters/: __init__.py  call_highlight_filter.py  decorator_operator_filter.py  name_highlight_filter.py  type_highlight_filter.py
flashback/debugging/styles/: __init__.py  jellybeans.py
flashback/formatting/: __init__.py  _inflect.py  adverbize.py  camelize.py  functions.py  kebabize.py  ordinalize.py  oxford_join.py  parameterize.py  pascalize.py  pluralize.py  singularize.py  snakeize.py  transliterate.py  truncate.py
flashback/formatting/locales/: de.py  en.py  es.py  fr.py
flashback/i16g/: __init__.py  locale.py
flashback/importing/: __init__.py  functions.py  import_class_from_path.py  import_module_from_path.py
flashback/iterating/: __init__.py  chunks.py  compact.py  flat_map.py  flatten.py  functions.py  partition.py  renumerate.py  uniq.py  uniq_by.py
flashback/logging/: __init__.py  affixed_stream_handler.py  configurations.py  muted.py
tests/: borg_test.py  classproperty_test.py  deprecated_test.py  encrypted_file_test.py  retryable_test.py  sampled_test.py  sentinel_test.py  singleton_test.py  test_borg.py  test_classproperty.py  test_deprecated.py  test_encrypted_file.py  test_retryable.py  test_sampled.py  test_sentinel.py  test_singleton.py  test_timeable.py  test_timed.py  test_timeoutable.py  timed_test.py  timeoutable_test.py
tests/accessing/: dig_test.py  pick_test.py  test_dig.py  test_pick.py  test_values_at.py  values_at_test.py
tests/caching/: cache_test.py  cached_test.py  test_cache.py  test_cacheable.py  test_cached.py
tests/caching/adapters/: disk_adapter_test.py  memcached_adapter_test.py  memory_adapter_test.py  redis_adapter_test.py  test_disk_adapter.py  test_memcached_adapter.py  test_memory_adapter.py  test_redis_adapter.py
tests/debugging/: caller_test.py  formatter_test.py  get_call_context_test.py  get_callable_test.py  get_frameinfo_test.py  parser_test.py  profiled_test.py  test_caller.py  test_formatter.py  test_functions.py  test_get_call_context.py  test_get_callable.py  test_get_frame.py  test_get_frameinfo.py  test_parser.py  test_profiled.py  test_xp.py  xp_test.py
tests/debugging/fixtures/: __init__.py  mock_abc.py  mock_class.py  mock_function.py
tests/formatting/: adverbize_test.py  camelize_test.py  kebabize_test.py  ordinalize_test.py  oxford_join_test.py  parameterize_test.py  pascalize_test.py  pluralize_test.py  singularize_test.py  snakeize_test.py  test_adverbize.py  test_camelize.py  test_functions.py  test_kebabize.py  test_ordinalize.py  test_oxford_join.py  test_parameterize.py  test_pascalize.py  test_pluralize.py  test_singularize.py  test_snakeize.py  test_transliterate.py  test_truncate.py  transliterate_test.py  truncate_test.py
tests/i16g/: locale_test.py  test_locale.py
tests/i16g/dummy_locales/: en.py  es.py  fr_fr.py
tests/importing/: import_class_from_path_test.py  import_module_from_path_test.py  test_functions.py  test_import_class_from_path.py  test_import_module_from_path.py
tests/importing/dummy_package/: dummy_class.py  dummy_module.py  mismatching_dummy_class.py
tests/importing/dummy_package_with_all/dummy_module/: __init__.py  dummy_file.py
tests/iterating/: chunks_test.py  compact_test.py  flat_map_test.py  flatten_test.py  partition_test.py  renumerate_test.py  test_chunks.py  test_compact.py  test_flat_map.py  test_flatten.py  test_functions.py  test_partition.py  test_renumerate.py  test_uniq.py  test_uniq_by.py  uniq_by_test.py  uniq_test.py
tests/logging/: affixed_stream_handler_test.py  configurations_test.py  muted_test.py  test_affixed_stream_handler.py  test_configurations.py  test_muted.py
