[project]
name = "flashback"
description = "A collection of python utilities you might have written a couple of times already"
readme = "README.md"
version = "3.1.4"

authors = [
    { name = "Paul RenvoiseÌ", email = "renvoisepaul@gmail.com" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

license-files = [
  "LICENSE",
]

requires-python = ">=3.12"

dependencies = [
    "cryptography>=46.0.3,<47.0.0",
    "pygments>=2.19.0,<3.0.0",
    "pymemcache>=3.5.0,<4.0.0",
    "redis>=5.3.0,<6.0.0",
    "regex>=2025.11.0,<2025.12.0",
    "unidecode>=1.3.0,<2.0.0",
]

[project.urls]
homepage = "https://github.com/PaulRenvoise/flashback"
repository = "https://github.com/PaulRenvoise/flashback"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-coverage==2.0.0",
    "mkdocs-material==9.7.0",
    "mkdocstrings==0.30.1",
    "ruff==0.14.5",
    "pyrefly==0.42.1",
    {include-group = "test"},
]

test = [
    "mockredispy==2.9.3",
    "pytest==9.0.1",
    "pytest-clarity==1.0.1",
    "pytest-cov==7.0.0",
    "pytest-randomly==4.0.1",
]

[tool.ruff]

line-length = 120

target-version = 'py312'

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "N",
  "YTT",
  "ASYNC",
  "B",
  "BLE",
  "A",
  "COM",
  "C4",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TCH",
  "INT",
  "ARG",
  "FLY",
  "PERF",
  "RUF",
  "PL",
  "PT",
  "UP",
]
ignore = [
  "SIM108",
  "TC003",
  "TC002",
  "B905",
]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["str", "bytes", "int"]

[tool.pyrefly]
python-version = "3.12"
ignore-missing-imports = ["*"]

[tool.uv.build-backend]
module-name = "flashback"
module-root = ""
